# github-code-review-agent

./: LICENSE  README.md
frontend/: gh-agent.html
gh-code-review-agent/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
gh-code-review-agent/app/: config.py  main.py
gh-code-review-agent/app/agents/: code_reviewer.py
gh-code-review-agent/app/controllers/: github_controller.py
gh-code-review-agent/app/models/: db_models.py  schema.py
gh-code-review-agent/app/services/: github_service.py  static_checks.py
gh-code-review-agent/app/tasks/: celery_app.py  task.py
gh-code-review-agent/app/utils/: db.py
gh-code-review-agent/etc/: base.txt  dev.txt
